DS-1679 Fix 'Transformation does not fit in left menu'

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -93,6 +93,7 @@ pre {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   padding-left: 0;
+  margin-bottom: 40px;
 }
 .sidemenu-unactive {
   left: -200px !important;
